--- a/trunk/org.ncbo.uvic.ontologytree.test/html-template/index.template.html
+++ b/trunk/org.ncbo.uvic.ontologytree.test/html-template/index.template.html
@@ -219,7 +219,7 @@ if ( hasProductInstall && !hasRequestedVersion ) {
 			"bgcolor", "${bgcolor}",
 			"name", "${application}",
 			"allowScriptAccess","always",
-			"flashVars", "log=true&ontology=1032&virtual=true&alerterrors=false&canchangeontology=true&rootconceptid=&nodeid=Antigen_Gene",
+			"flashVars", "log=true&server=&redirecturl=&ontology=1032&virtual=true&alerterrors=false&canchangeontology=true&rootconceptid=&nodeid=",
 			"type", "application/x-shockwave-flash",
 			"pluginspage", "http://www.adobe.com/go/getflashplayer"
 	);
